--- a/TDSTecnologia.Site.Web/appsettings.json
+++ b/TDSTecnologia.Site.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "AppConnection": "Host=localhost;Database=postgres;Username=postgres;Password=1234"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
