--- a/TDSTecnologia.Site.Infrastructure/TDSTecnologia.Site.Infrastructure.csproj
+++ b/TDSTecnologia.Site.Infrastructure/TDSTecnologia.Site.Infrastructure.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Authentication.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="2.2.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.4" />
+    <PackageReference Include="PagedList" Version="1.17.0" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="7.9.1" />
   </ItemGroup>
 
   <ItemGroup>
