Final da parte V

--- a/TDSTecnologia.Site.Web/appsettings.json
+++ b/TDSTecnologia.Site.Web/appsettings.json
@@ -7,5 +7,12 @@
       "Default": "Warning"
     }
   },
+  "ConfiguracoesEmail": {
+    "Endereco": "smtp.gmail.com",
+    "Porta": "587",
+    "Email": "",
+    "Senha": "",
+    "Destinatario": ""
+  },
   "AllowedHosts": "*"
 }
