--- a/TDSTecnologia.Site.Web/appsettings.Production.json
+++ b/TDSTecnologia.Site.Web/appsettings.Production.json
@@ -7,6 +7,7 @@
       "Default": "Debug"
     }
   },
+  "Arquivo": "Production",
   "ConfiguracoesEmail": {
     "Endereco": "smtp.gmail.com",
     "Porta": "587",
