--- a/TDSTecnologia.Site.Web/appsettings.Staging.json
+++ b/TDSTecnologia.Site.Web/appsettings.Staging.json
@@ -7,6 +7,7 @@
       "Default": "Debug"
     }
   },
+  "Arquivo": "Staging",
   "ConfiguracoesEmail": {
     "Endereco": "smtp.gmail.com",
     "Porta": "587",
