--- a/TDSTecnologia.Site.Web/appsettings.Development.json
+++ b/TDSTecnologia.Site.Web/appsettings.Development.json
@@ -1,9 +1,19 @@
 {
+  "ConnectionStrings": {
+    "AppConnection": "Host=localhost;Database=postgres;Username=postgres;Password=1234"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Debug"
     }
-  }
+  },
+  "Arquivo": "Development",
+  "ConfiguracoesEmail": {
+    "Endereco": "smtp.gmail.com",
+    "Porta": "587",
+    "Email": "",
+    "Senha": "",
+    "Destinatario": ""
+  },
+  "AllowedHosts": "*"
 }
